<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_account_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.example.user.blockchainapplication.Activities.AccountDetail">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include

            android:id="@+id/app_bar"
            layout="@layout/app_bar"/>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/account_info"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="32dp"
        android:textColor="@color/colorBlack"
        android:textSize="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/account_address"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:paddingTop="1dp"
        android:layout_marginTop="32dp"
        android:textStyle="bold"
        android:layout_marginBottom="2dp"
        android:textSize="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="1dp"
        android:id="@+id/et_Adress"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorBlack"
        android:editable="false"
        android:textColorHint="@color/colorBlack"
        android:hint = "addersss"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/account_balance"
        android:paddingTop="5dp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:editable="false"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_balance"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:paddingTop="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:hint = "balance"/>

</LinearLayout>
